# two-towers-overlords

./: .env  .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  redis.runpod.conf  setup.sh  upforce.sh
backend/: api.py  data.py  exploration.ipynb  main.py  model.py  pyproject.toml  search.py  training.py  uv.nightly.toml
backend/wandb/: latest-run
backend/wandb/run-20250620_154627-qidt4xrx/: run-qidt4xrx.wandb
backend/wandb/run-20250620_154627-qidt4xrx/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
bes-cbow/: 00_train_tkn.py  01_train_w2v.py  03_load_model_weights.py  dataset.py  evaluate.py
cjy8516/: main.py  pyproject.toml  temp.py
freemvmt/: .env.example  GPU_OPTIMIZATION_GUIDE.md  README.md  __init__.py  dataset_comparison.py  demo.py  docker-compose.yml  exploration.ipynb  main.py  model.py  pyproject.toml  redis.remote.conf  search.py  send.sh  setup.sh  ssh.sh  sweep_config.py  training.py
freemvmt/api/: api.py  pyproject.toml
freemvmt/backend/: Dockerfile  api.py  data.py  model.py  pyproject.toml  run.sh  search.py
freemvmt/frontend/: Dockerfile  app.py  pyproject.toml
freemvmt/frontend/.streamlit/: config.toml
freemvmt/models/: e15.lr4.d384.m3.pt  e15.lr4.d512.m3.pt
freemvmt/sweeps/: 250617-1ukkvqtl-results.csv  250617-1zh189kd-results.csv  250617-8x5w5jxn-results.csv  250617-uodzb69z-buffer.txt  250617-uodzb69z-results.csv  250617-yo9idsvy-results.csv
frontend/: app.py
models/: e15.lr4.d384.m3_info.json  e15.lr4.d384.m3_summary.txt
scripts/: bes_cbow.sh  setup.sh
sweeps/: 250617-1ukkvqtl-results.csv  250617-8x5w5jxn-buffer.txt
