[project]
name = "freemvmt"
version = "0.1.0"
description = "Two-towers document retrieval model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.16.0",
    "notebook>=7.4.3",
]
