[project]
name = "freemvmt"
version = "0.1.0"
description = "Two-towers document retrieval model - everything you need from project root"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.16.0",
    "notebook>=7.4.3",
    "torchinfo>=1.8.0",
    "redis>=6.2.0",
    "redisvl>=0.7.0",
    "fastapi>=0.115.13",
    "streamlit>=1.46.0",
]
