[project]
name = "two-towers-api"
version = "0.1.0"
description = "API backend for two-towers document retrieval"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.5.0",
    "torch>=2.7.0",
    "transformers>=4.36.0",
    "redis>=5.0.0",
    "redisvl>=0.2.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "datasets>=3.6.0",
]
